# pedigree-harmoniz

./: Dogs Pedigree.csv  HW.txt  README.md  TESTING.md  Test_Cases.xlsx  pyproject.toml
databricks/: run_unit_tests.py  run_unit_tests_cycle.py  run_unit_tests_dup_id.py
fixtures/csv/: clean.csv  corrupt_duplicate_id.csv  corrupt_immediate_loop.csv  corrupt_long_cycle.csv  e2e_flow_fail_empty_dog_card_breed.csv
java-tests/: pom.xml
java-tests/src/test/java/com/pedigree/api/: PedigreeApiTest.java
java-tests/src/test/java/com/pedigree/data/: PedigreeCsvIntegrityTest.java
java-tests/src/test/java/com/pedigree/ui/: PedigreeUiTest.java
java-tests/src/test/resources/fixtures/: clean.csv  corrupt_immediate_loop.csv
scripts/: generate_corrupted_datasets.py  generate_test_cases_excel.py
src/pedigree_app/: datasets.py  load_csv.py  main.py  pedigree.py
src/pedigree_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pedigree_app/static/: pedigree_tree.js  style.css
src/pedigree_app/templates/: base.html  dog_card.html  dog_pedigree.html  dogs_list.html  error.html
testCases/: API Level.html  Data Level.html  UI Level.html
tests/: __init__.py  conftest.py  csv_helpers.py  dataset_validation.py  pedigree_helpers.py  test_api.py  test_data_level.py  test_load_csv.py  test_pedigree.py
tests/ui/: conftest.py  test_pedigree_ui.py
